--- a/Cuchillos/Cuchillo_Verdulero/Cuchillo_Verdulero.html
+++ b/Cuchillos/Cuchillo_Verdulero/Cuchillo_Verdulero.html
@@ -13,21 +13,21 @@
         </div>
         <nav>  
             <ul>
-                <li><a href="../Index.html"><h2>Inicio</h2></a></li>
-                <li><a href="../Recetas/Recetas.html"><h2>Recetas</h2></a>
+                <li><a href="/Index.html"><h2>Inicio</h2></a></li>
+                <li><a href="/Recetas/Recetas.html"><h2>Recetas</h2></a>
                 <ul>
-                    <li><a href="../Recetas/Entradas/Entradas.html"><h3>Entradas</h3></a></li>
-                    <li><a href="../Recetas/Plato_Fuerte/Plato_Fuerte.html"><h3>Plato Fuerte</h3></a></li>
-                    <li><a href="../Recetas/Guarniciones/Guarniciones.html"><h3>Guarniciones</h3></a></li>
-                    <li><a href="../Recetas/Postres/Postres.html"><h3>Postres</h3></a></li>
+                    <li><a href="/Recetas/Entradas/Entradas.html"><h3>Entradas</h3></a></li>
+                    <li><a href="/Recetas/Plato_Fuerte/Plato_Fuerte.html"><h3>Plato Fuerte</h3></a></li>
+                    <li><a href="/Recetas/Guarniciones/Guarniciones.html"><h3>Guarniciones</h3></a></li>
+                    <li><a href="/Recetas/Postres/Postres.html"><h3>Postres</h3></a></li>
                 </ul>
                 </li>
-                <li><a href=""><h2>Cuchillos</h2></a>
+                <li><a href="/Cuchillos/Cuchillos.html"><h2>Cuchillos</h2></a>
                     <ul>
-                        <li><a href="./Cuchillo_De_Chef/Cuchillo_De_Chef.html"><h3>Cuchillo De Chef</h3></a></li>
-                        <li><a href="./Cuchillo_Filetero/Cuchillo_Filetero.html"><h3>Cuchillo Filetero</h3></a></li>
-                        <li><a href="./Cuchillo_Verdulero/Cuchillo_Verdulero.html"><h3>Cuchillo Verdulero</h3></a></li>
-                        <li><a href="./Cuchillo_Para_Pan/Cuchillo_Para_Pan.html"><h3>Cuchillo Para Pan</h3></a></li>
+                        <li><a href="/Cuchillos/Cuchillo_De_Chef/Cuchillo_De_Chef.html"><h3>Cuchillo De Chef</h3></a></li>
+                        <li><a href="/Cuchillos/Cuchillo_Filetero/Cuchillo_Filetero.html"><h3>Cuchillo Filetero</h3></a></li>
+                        <li><a href="/Cuchillos/Cuchillo_Verdulero/Cuchillo_Verdulero.html"><h3>Cuchillo Verdulero</h3></a></li>
+                        <li><a href="/Cuchillos/Cuchillo_Para_Pan/Cuchillo_Para_Pan.html"><h3>Cuchillo Para Pan</h3></a></li>
                     </ul>
                 </li>
                 <li><a href="../"><h2>Acerca de</h2></a></li>
@@ -35,12 +35,10 @@
             </ul>
         </nav>
         <hr>
-        <section><!--Imagen del Inicio-->
+        <section><!--tarjetas de cuchillos verduleros-->
             <div>
-                <p><h1>Creado para Deleitar</h1></p>
-                <h2>Lo Mejor de Nuestro Recetario</h2>
+                <p><h1></h1></p>
             </div>
-            <img src="../Imagenes/Imagen_Header.jpg" alt="Img_Main" width="100%">
         </section>
     </header>
     <hr>
