--- a/Cuchillos/Cuchillo_Para_Pan/Cuchillo_Para_Pan.html
+++ b/Cuchillos/Cuchillo_Para_Pan/Cuchillo_Para_Pan.html
@@ -47,7 +47,6 @@
             <table width="100%" height="800px">
             <tr>
                 <div>
-                <p><h2>Cuchillos para pan</h2></p>
                 <th>
                 <div>
                     <img src="/Cuchillos/Imagenes_Cuchillo/Imagenes_cuchillo_pan/cuchillo1.jpg" alt="cuchillo para pan piklohas" width="50%">
@@ -288,6 +287,7 @@
                     </div>
                 </th>
             </tr>
+            </table>
         </section>
     </main>
 </body>
