--- a/Cuchillos/Cuchillo_De_Chef/Cuchillo_De_Chef.html
+++ b/Cuchillos/Cuchillo_De_Chef/Cuchillo_De_Chef.html
@@ -292,5 +292,18 @@
             </table>
         </section>
     </main>
+    <footer>
+        <div>
+            <h3>GIT-FOOD</h3>
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+            </ul>
+        </div>
+        <div>
+            <p>© 2023 GIT-FOOD. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
