--- a/Cuchillos/Cuchillo_Para_Pan/Cuchillo_Para_Pan.html
+++ b/Cuchillos/Cuchillo_Para_Pan/Cuchillo_Para_Pan.html
@@ -35,6 +35,8 @@
             </ul>
         </nav>
         <hr>
+        <hr>
+        <img src="../Imagenes/Imagen_Header.jpg" alt="Img_Main" width="100%">
         <section><!--tarjetas de cuchillos para pan-->
             <div>
                 <p><h1>nuestro catalogo de cuchillos para pan</h1></p>
