--- a/Cuchillos/Cuchillo_Verdulero/Cuchillo_Verdulero.html
+++ b/Cuchillos/Cuchillo_Verdulero/Cuchillo_Verdulero.html
@@ -35,6 +35,8 @@
             </ul>
         </nav>
         <hr>
+        <img src="/Imagenes/Imagen_Header.jpg" alt="Img_Main" width="100%">
+        <hr>
         <section><!--tarjetas de cuchillos verduleros-->
             <div>
                 <p><h1>Nuestro catalogo de cuchillos verduleros</h1></p>
