--- a/Cuchillos/Cuchillos.html
+++ b/Cuchillos/Cuchillos.html
@@ -34,6 +34,8 @@
                 <li><a href=""><h2>Registro</h2></a></li>
             </ul>
         </nav>
+        <hr>
+        <img src="../Imagenes/Imagen_Header.jpg" alt="Img_Main" width="100%">
     </header>
     <hr>
     <main>
