--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
                 <li><a href="./Recetas/Recetas.html"><h2>Recetas</h2></a>
                 <ul>
                     <li><a href="./Recetas/Entradas/Entradas.html"><h3>Entradas</h3></a></li>
-                    <li><a href="./Recetas/Plato_Fuerte/Plato_Fuerte.html"><h3>Plato Fuerte</h3></a></li>
+                    <li><a href="/Recetas/Plato_Fuerte/Plato_Fuerte.html"><h3>Plato Fuerte</h3></a></li>
                     <li><a href="./Recetas/Guarniciones/Guarniciones.html"><h3>Guarniciones</h3></a></li>
                     <li><a href="./Recetas/Postres/Postres.html"><h3>Postres</h3></a></li>
                 </ul>
