--- a/Cuchillos/Cuchillo_De_Chef/Cuchillo_De_Chef.html
+++ b/Cuchillos/Cuchillo_De_Chef/Cuchillo_De_Chef.html
@@ -35,14 +35,16 @@
             </ul>
         </nav>
         <hr>
+        <img src="/Imagenes/Imagen_Header.jpg" alt="Img_Main" width="100%">
+    </header>
+    <hr>
+    <main>
         <section><!--separador-->
             <table border="1">
             <div>
                 <p><h1>Nuestro catalogo de cuchillos de chef</h1></p>
             </div>
         </section>
-    </header>
-    <main>
         <section><!--tarjetas de cuchillos para chef-->
             <table width="100%" height="800px">
                 <tr>
