--- a/Recetas/Guarniciones/Guarniciones.html
+++ b/Recetas/Guarniciones/Guarniciones.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Entradas</title>
 </head>
 <body>
     <header>
@@ -13,21 +13,21 @@
         </div>
         <nav>  
             <ul>
-                <li><a href="../Index.html"><h2>Inicio</h2></a></li>
-                <li><a href="./Recetas.html"><h2>Recetas</h2></a>
+                <li><a href="/Index.html"><h2>Inicio</h2></a></li>
+                <li><a href="/Recetas/Recetas.html"><h2>Recetas</h2></a>
                 <ul>
-                    <li><a href="./Entradas/Entradas.html"><h3>Entradas</h3></a></li>
-                    <li><a href="./Plato_Fuerte/Plato_Fuerte.html"><h3>Plato Fuerte</h3></a></li>
-                    <li><a href="./Guarniciones/Guarniciones.html"><h3>Guarniciones</h3></a></li>
-                    <li><a href="./Postres/Postres.html"><h3>Postres</h3></a></li>
+                    <li><a href="/Recetas/Entradas/Entradas.html"><h3>Entradas</h3></a></li>
+                    <li><a href="/Recetas/Plato_Fuerte/Plato_Fuerte.html"><h3>Plato Fuerte</h3></a></li>
+                    <li><a href="/Recetas/Guarniciones/Guarniciones.html"><h3>Guarniciones</h3></a></li>
+                    <li><a href="/Recetas/Postres/Postres.html"><h3>Postres</h3></a></li>
                 </ul>
                 </li>
-                <li><a href="../Cuchillos/Cuchillos.html"><h2>Cuchillos</h2></a>
+                <li><a href="/Cuchillos/Cuchillos.html"><h2>Cuchillos</h2></a>
                     <ul>
-                        <li><a href="../Cuchillos/Cuchillo_De_Chef/Cuchillo_De_Chef.html"><h3>Cuchillo De Chef</h3></a></li>
-                        <li><a href="../Cuchillos/Cuchillo_Filetero/Cuchillo_Filetero.html"><h3>Cuchillo Filetero</h3></a></li>
-                        <li><a href="../Cuchillos/Cuchillo_Verdulero/Cuchillo_Verdulero.html"><h3>Cuchillo Verdulero</h3></a></li>
-                        <li><a href="../Cuchillos/Cuchillo_Para_Pan/Cuchillo_Para_Pan.html"><h3>Cuchillo Para Pan</h3></a></li>
+                        <li><a href="/Cuchillos/Cuchillo_De_Chef/Cuchillo_De_Chef.html"><h3>Cuchillo De Chef</h3></a></li>
+                        <li><a href="/Cuchillos/Cuchillo_Filetero/Cuchillo_Filetero.html"><h3>Cuchillo Filetero</h3></a></li>
+                        <li><a href="/Cuchillos/Cuchillo_Verdulero/Cuchillo_Verdulero.html"><h3>Cuchillo Verdulero</h3></a></li>
+                        <li><a href="/Cuchillos/Cuchillo_Para_Pan/Cuchillo_Para_Pan.html"><h3>Cuchillo Para Pan</h3></a></li>
                     </ul>
                 </li>
                 <li><a href="../"><h2>Acerca de</h2></a></li>
@@ -36,11 +36,11 @@
         </nav>
         <hr>
         <section><!--Imagen del Inicio-->
+            <img src="/Imagenes/Imagen_Header.jpg" alt="Img_Main" width="100%">
             <div>
                 <p><h1>Creado para Deleitar</h1></p>
                 <h2>Lo Mejor de Nuestro Recetario</h2>
             </div>
-            <img src="../Imagenes/food-1898194_1280.jpg" alt="Img_Main" width="100%">
         </section>
     </header>
     <hr>
