--- a/Cuchillos/Cuchillo_Filetero/Cuchillo_Filetero.html
+++ b/Cuchillos/Cuchillo_Filetero/Cuchillo_Filetero.html
@@ -36,7 +36,7 @@
         </nav>
         <hr>
         <hr>
-        <img src="../Imagenes/Imagen_Header.jpg" alt="Img_Main" width="100%">
+        <img src="/Imagenes/Imagen_Header.jpg" alt="Img_Main" width="100%">
         <section><!--Imagen del Inicio-->
             <div>
                 <p><h1>nuestro catalogo de cuchillos fileteros</h1></p>
