--- a/Cuchillos/Cuchillo_Para_Pan/Cuchillo_Para_Pan.html
+++ b/Cuchillos/Cuchillo_Para_Pan/Cuchillo_Para_Pan.html
@@ -36,7 +36,7 @@
         </nav>
         <hr>
         <hr>
-        <img src="../Imagenes/Imagen_Header.jpg" alt="Img_Main" width="100%">
+        <img src="/Imagenes/Imagen_Header.jpg" alt="Img_Main" width="100%">
         <section><!--tarjetas de cuchillos para pan-->
             <div>
                 <p><h1>nuestro catalogo de cuchillos para pan</h1></p>
