--- a/Cuchillos/Cuchillo_Verdulero/Cuchillo_Verdulero.html
+++ b/Cuchillos/Cuchillo_Verdulero/Cuchillo_Verdulero.html
@@ -290,6 +290,7 @@
             </div>
             </th>
                 </tr>
+                </table>
         </section>
     </main>
     <footer>
