--- a/Recetas/Guarniciones/Guarniciones.html
+++ b/Recetas/Guarniciones/Guarniciones.html
@@ -44,5 +44,89 @@
         </section>
     </header>
     <hr>
+    <main>
+        <section><!--Tarjetas Recetas-->
+            <table width="100%" height="800px">
+                <tr>
+                    <th> Puré de Papas
+                        <br>
+                        <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                        <ul> 
+                            <h2>Ingredientes:</h2>
+                            <li>1 kg de papas</li>
+                            <li>100 g de mantequilla</li>
+                            <li>1/2 taza de leche</li>
+                            <li>Sal y pimienta al gusto</li>
+                        </ul>
+                        <ol> 
+                            <h2>Instrucciones:</h2>
+                            <li>Pelar y cortar las papas en trozos. Cocinar en agua hirviendo con sal durante 15-20 minutos o hasta que estén tiernas.</li>
+                            <li>Escurrir las papas y hacer un puré con un pisa-papas.</li>
+                            <li>Agregar la mantequilla, leche, sal y pimienta. Mezclar bien hasta obtener una textura cremosa.</li>
+                        </ol>
+                    </th>
+                    <th>Ensalada César
+                        <br>
+                        <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                        <ul> 
+                            <h2>Ingredientes:</h2>
+                            <li>Lechuga romana</li>
+                            <li>Crutones</li>
+                            <li>Queso parmesano</li>
+                            <li>Aderezo César</li>
+                        </ul>
+                        <ol> 
+                            <h2>Instrucciones:</h2>
+                            <li>Mezcla todos los ingredientes en un tazón y sirve.</li>
+                        </ol>
+                    </th>
+                    <th>Arroz Pilaf
+                        <br>
+                        <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                        <ul> 
+                            <h2>Ingredientes:</h2>
+                            <li>1 taza de arroz</li>
+                            <li>2 tazas de caldo</li>
+                            <li>Cebolla picada</li>
+                            <li>Mantequilla</li>
+                        </ul>
+                        <ol> 
+                            <h2>Instrucciones:</h2>
+                            <li>Sofríe la cebolla en mantequilla, añade el arroz y luego el caldo. Cocina hasta que el arroz esté tierno.</li>
+                        </ol>
+                    </th>
+                    <th>Vegetales Asados
+                        <br>
+                        <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                        <ul> 
+                            <h2>Ingredientes:</h2>
+                            <li>Zanahorias, pimientos, calabacines</li>
+                            <li>Aceite de oliva</li>
+                            <li>Sal y pimienta</li>
+                        </ul>
+                        <ol> 
+                            <h2>Instrucciones:</h2>
+                            <li>Corta los vegetales, mezcla con aceite, sal y pimienta, y asa en el horno a 200°C durante 20 minutos.</li>
+                        </ol>
+                    </th>
+                </tr>
+            </table>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <h3>GIT-FOOD</h3>
+            <p>Explora recetas tradicionales y modernas que celebran la diversidad culinaria. 
+                    Comparte momentos especiales alrededor de la mesa con nuestras deliciosas propuestas.</p>
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+            </ul>
+        </div>
+        <div>
+            <p>© 2023 GIT-FOOD. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
