--- a/Recetas/Plato_Fuerte/Plato_Fuerte.html
+++ b/Recetas/Plato_Fuerte/Plato_Fuerte.html
@@ -44,5 +44,96 @@
         </section>
     </header>
     <hr>
+    <main>
+        <section><!--Tarjetas Recetas-->
+            <table width="100%" height="800px">
+                <tr>
+                    <th>Fuerte: Pollo Al Limón
+                        <br>
+                        <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                        <ul> 
+                            <h2>Ingredientes:</h2>
+                            <li>4 pechugas de pollo</li>
+                            <li>2 limones (su jugo)</li>
+                            <li>3 cucharadas de aceite de oliva</li>
+                            <li>2 dientes de ajo, picados</li>
+                            <li>Sal y pimienta al gusto</li>
+                            <li>Perejil fresco (opcional, para decorar)</li>
+                        </ul>
+                        <ol> 
+                            <h2>Instrucciones:</h2>
+                            <li>Marinar el pollo con el jugo de limón, aceite de oliva, ajo, sal y pimienta durante 30 minutos.</li>
+                            <li>Calentar una sartén a fuego medio y cocinar el pollo durante 6-7 minutos por cada lado, o hasta que esté dorado y cocido.</li>
+                            <li>Decorar con perejil fresco y servir.</li>
+                        </ol>
+                    </th>
+                    <th>Spaghetti a la Boloñesa
+                        <br>
+                        <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                        <ul> 
+                            <h2>Ingredientes:</h2>
+                            <li>400 g de espaguetis</li>
+                            <li>300 g de carne molida</li>
+                            <li>1 lata de tomate triturado</li>
+                            <li>Cebolla, ajo, y especias al gusto</li>
+                        </ul>
+                        <ol> 
+                            <h2>Instrucciones:</h2>
+                            <li>Cocina los espaguetis según las instrucciones.</li>
+                            <li>Sofríe cebolla y ajo, añade carne y tomate. Cocina a fuego lento.</li>
+                            <li>Mezcla con los espaguetis y sirve.</li>
+                        </ol>
+                    </th>
+                    <th>Tacos de Pescado
+                        <br>
+                        <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                        <ul> 
+                            <h2>Ingredientes:</h2>
+                            <li>Filetes de pescado</li>
+                            <li>Tortillas</li>
+                            <li>Repollo</li>
+                            <li>Salsa de yogur</li>
+                        </ul>
+                        <ol> 
+                            <h2>Instrucciones:</h2>
+                            <li>Cocina el pescado a la parrilla.</li>
+                            <li>Sirve en tortillas con repollo y salsa de yogur.</li>
+                        </ol>
+                    </th>
+                    <th>Lentejas Estofadas
+                        <br>
+                        <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                        <ul> 
+                            <h2>Ingredientes:</h2>
+                            <li>1 taza de lentejas</li>
+                            <li>1 zanahoria</li>
+                            <li>1 cebolla</li>
+                            <li>Caldo de verduras</li>
+                        </ul>
+                        <ol> 
+                            <h2>Instrucciones:</h2>
+                            <li>Sofríe cebolla y zanahoria picada.</li>
+                            <li>Añade lentejas y caldo. Cocina a fuego lento hasta que estén tiernas.</li>
+                        </ol>
+                    </th>
+                </tr>
+            </table>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <h3>GIT-FOOD</h3>
+            <p>Explora recetas tradicionales y modernas que celebran la diversidad culinaria. 
+                    Comparte momentos especiales alrededor de la mesa con nuestras deliciosas propuestas.</p>
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+            </ul>
+        </div>
+        <div>
+            <p>© 2023 GIT-FOOD. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
