--- a/Recetas/Postres/Postres.html
+++ b/Recetas/Postres/Postres.html
@@ -44,5 +44,100 @@
         </section>
     </header>
     <hr>
+    <main>
+        <section><!--Tarjetas Recetas-->
+            <table width="100%" height="800px">
+                <tr>
+                    <th>Postre: Brownies de Chocolate
+                        <br>
+                        <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                        <ul> 
+                            <h2>Ingredientes:</h2>
+                            <li>150 g de chocolate negro</li>
+                            <li>100 g de mantequilla</li>
+                            <li>1 taza de azúcar</li>
+                            <li>2 huevos</li>
+                            <li>1/2 taza de harina</li>
+                            <li>1/4 cucharadita de sal</li>
+                            <li>1/2 taza de nueces (opcional)</li>
+                        </ul>
+                        <ol> 
+                            <h2>Instrucciones:</h2>
+                            <li>Precalentar el horno a 180°C y engrasar un molde.</li>
+                            <li>Derretir el chocolate y la mantequilla a baño maría.</li>
+                            <li>Retirar del fuego y añadir el azúcar, mezclar bien.</li>
+                            <li>Agregar los huevos uno a uno, seguido de la harina y la sal. Mezclar hasta que esté suave.</li>
+                            <li>Incorporar las nueces (si se utilizan) y verter en el molde.</li>
+                            <li>Hornear durante 20-25 minutos. Dejar enfriar antes de cortar.</li>
+                        </ol>
+                    </th>
+                    <th>Tarta de Manzana
+                        <br>
+                        <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                        <ul> 
+                            <h2>Ingredientes:</h2>
+                            <li>Masa de tarta</li>
+                            <li>4 manzanas</li>
+                            <li>Azúcar y canela</li>
+                        </ul>
+                        <ol> 
+                            <h2>Instrucciones:</h2>
+                            <li>Rellena la masa con manzanas, azúcar y canela. Hornea a 180°C por 30 minutos.</li>
+                        </ol>
+                    </th>
+                    <th>Flan de Caramelo
+                        <br>
+                        <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                        <ul> 
+                            <h2>Ingredientes:</h2>
+                            <li>1 lata de leche condensada</li>
+                            <li>1 lata de leche evaporada</li>
+                            <li>3 huevos</li>
+                            <li>1 taza de azúcar (para el caramelo)</li>
+                        </ul>
+                        <ol> 
+                            <h2>Instrucciones:</h2>
+                            <li>Prepara el caramelo y viértelo en un molde.</li>
+                            <li>Mezcla los demás ingredientes</li>
+                            <li>vierte sobre el caramelo y hornea al baño maría.</li>
+                        </ol>
+                    </th>
+                    <th>Galletas de Avena y Pasas
+                        <br>
+                        <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                        <ul> 
+                            <h2>Ingredientes:</h2>
+                            <li>1 taza de avena</li>
+                            <li>1/2 taza de azúcar</li>
+                            <li>1/2 taza de mantequilla</li>
+                            <li>1 huevo</li>
+                            <li>Pasas al gusto</li>
+                        </ul>
+                        <ol> 
+                            <h2>Instrucciones:</h2>
+                            <li>Mezcla todos los ingredientes</li>
+                            <li>forma bolitas</li>
+                            <li>Hornea a 180°C por 10-12 minutos.</li>
+                        </ol>
+                    </th>
+                </tr>
+            </table>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <h3>GIT-FOOD</h3>
+            <p>Explora recetas tradicionales y modernas que celebran la diversidad culinaria. 
+                    Comparte momentos especiales alrededor de la mesa con nuestras deliciosas propuestas.</p>
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+            </ul>
+        </div>
+        <div>
+            <p>© 2023 GIT-FOOD. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
