--- a/Recetas/Recetas.html
+++ b/Recetas/Recetas.html
@@ -44,5 +44,326 @@
         </section>
     </header>
     <hr>
+    <main>
+        <h1>NUESTRAS ENTRADAS DE LA SEMANA</h1>
+        <section>
+            <section><!--Tarjetas Recetas-->
+                <table width="100%" height="800px">
+                    <tr>
+                        <th>Entrada:Bruschetta de Tomate y Albahaca
+                            <br>
+                            <img src="/Imagenes/Bruschetta_de_Tomate_y_Albahaca.jpg" alt="Brouchetta de tomate" width="50%" >
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>1 baguette</li>
+                                <li>2 tazas de tomates cherry, picados</li>
+                                <li>1 diente de ajo, picado</li>
+                                <li>1/4 taza de hojas de albahaca fresca, picadas</li>
+                                <li>3 cucharadas de aceite de oliva</li>
+                                <li>Sal y pimienta al gusto</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Precalienta el horno a 200°C.</li>
+                                <li>Corta la baguette en rebanadas y tuéstalas en el horno durante 5-7 minutos.</li>
+                                <li>En un bol, mezcla los tomates, ajo, albahaca, aceite de oliva, sal y pimienta.</li>
+                                <li>Coloca la mezcla sobre las rebanadas de baguette tostadas y sirve.</li>
+                            </ol>
+                        </th>
+                        <th>Guacamole
+                            <br>
+                            <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>2 aguacates</li>
+                                <li>1 tomate</li>
+                                <li>1/2 cebolla</li>
+                                <li>Jugo de 1 limón</li>
+                                <li>Sal al gusto</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Machaca los aguacates y mezcla con los demás ingredientes.</li>
+                                <li>Sirve con totopos o galletas saladas.</li>
+                            </ol>
+                        </th>
+                        <th>Rollitos de Jamón y Queso
+                            <br>
+                            <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>Lonchas de jamón</li>
+                                <li>Lonchas de queso</li>
+                                <li>Ensalada (opcional)</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Enrolla las lonchas de jamón con queso y, si lo deseas, añade ensalada en el interior.</li>
+                                <li>Asegura con un palillo.</li>
+                            </ol>
+                        </th>
+                        <th>Hummus Clásico
+                            <br>
+                            <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>1 lata de garbanzos</li>
+                                <li>2 cucharadas de tahini</li>
+                                <li>Jugo de 1 limón</li>
+                                <li>2 dientes de ajo</li>
+                                <li>Aceite de oliva y sal al gust</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Mezcla todos los ingredientes en un procesador hasta obtener una mezcla suave.</li>
+                                <li>Sirve con pan pita o vegetales.</li>
+                            </ol>
+                        </th>
+                    </tr>
+                </table>
+            </section>
+            <hr>
+            <h1>LOS PLATOS FUERTES DE LA SEMANA</h1>
+            <section><!--Tarjetas Recetas-->
+                <table width="100%" height="800px">
+                    <tr>
+                        <th>Fuerte: Pollo Al Limón
+                            <br>
+                            <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>4 pechugas de pollo</li>
+                                <li>2 limones (su jugo)</li>
+                                <li>3 cucharadas de aceite de oliva</li>
+                                <li>2 dientes de ajo, picados</li>
+                                <li>Sal y pimienta al gusto</li>
+                                <li>Perejil fresco (opcional, para decorar)</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Marinar el pollo con el jugo de limón, aceite de oliva, ajo, sal y pimienta durante 30 minutos.</li>
+                                <li>Calentar una sartén a fuego medio y cocinar el pollo durante 6-7 minutos por cada lado, o hasta que esté dorado y cocido.</li>
+                                <li>Decorar con perejil fresco y servir.</li>
+                            </ol>
+                        </th>
+                        <th>Spaghetti a la Boloñesa
+                            <br>
+                            <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>400 g de espaguetis</li>
+                                <li>300 g de carne molida</li>
+                                <li>1 lata de tomate triturado</li>
+                                <li>Cebolla, ajo, y especias al gusto</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Cocina los espaguetis según las instrucciones.</li>
+                                <li>Sofríe cebolla y ajo, añade carne y tomate. Cocina a fuego lento.</li>
+                                <li>Mezcla con los espaguetis y sirve.</li>
+                            </ol>
+                        </th>
+                        <th>Tacos de Pescado
+                            <br>
+                            <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>Filetes de pescado</li>
+                                <li>Tortillas</li>
+                                <li>Repollo</li>
+                                <li>Salsa de yogur</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Cocina el pescado a la parrilla.</li>
+                                <li>Sirve en tortillas con repollo y salsa de yogur.</li>
+                            </ol>
+                        </th>
+                        <th>Lentejas Estofadas
+                            <br>
+                            <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>1 taza de lentejas</li>
+                                <li>1 zanahoria</li>
+                                <li>1 cebolla</li>
+                                <li>Caldo de verduras</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Sofríe cebolla y zanahoria picada.</li>
+                                <li>Añade lentejas y caldo. Cocina a fuego lento hasta que estén tiernas.</li>
+                            </ol>
+                        </th>
+                    </tr>
+                </table>
+            </section>
+            <hr>
+            <h1>LAS GUARNICIONES QUE NOS ACOMPAÑAN ESTA SEMANA</h1>
+            <section><!--Tarjetas Recetas-->
+                <table width="100%" height="800px">
+                    <tr>
+                        <th> Puré de Papas
+                            <br>
+                            <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>1 kg de papas</li>
+                                <li>100 g de mantequilla</li>
+                                <li>1/2 taza de leche</li>
+                                <li>Sal y pimienta al gusto</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Pelar y cortar las papas en trozos. Cocinar en agua hirviendo con sal durante 15-20 minutos o hasta que estén tiernas.</li>
+                                <li>Escurrir las papas y hacer un puré con un pisa-papas.</li>
+                                <li>Agregar la mantequilla, leche, sal y pimienta. Mezclar bien hasta obtener una textura cremosa.</li>
+                            </ol>
+                        </th>
+                        <th>Ensalada César
+                            <br>
+                            <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>Lechuga romana</li>
+                                <li>Crutones</li>
+                                <li>Queso parmesano</li>
+                                <li>Aderezo César</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Mezcla todos los ingredientes en un tazón y sirve.</li>
+                            </ol>
+                        </th>
+                        <th>Arroz Pilaf
+                            <br>
+                            <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>1 taza de arroz</li>
+                                <li>2 tazas de caldo</li>
+                                <li>Cebolla picada</li>
+                                <li>Mantequilla</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Sofríe la cebolla en mantequilla, añade el arroz y luego el caldo. Cocina hasta que el arroz esté tierno.</li>
+                            </ol>
+                        </th>
+                        <th>Vegetales Asados
+                            <br>
+                            <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>Zanahorias, pimientos, calabacines</li>
+                                <li>Aceite de oliva</li>
+                                <li>Sal y pimienta</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Corta los vegetales, mezcla con aceite, sal y pimienta, y asa en el horno a 200°C durante 20 minutos.</li>
+                            </ol>
+                        </th>
+                    </tr>
+                </table>
+            </section>
+            <hr>
+            <h1>LOS POSTRES QUE NOS ENDULZAN ESTE PERIODO</h1>
+            <section><!--Tarjetas Recetas-->
+                <table width="100%" height="800px">
+                    <tr>
+                        <th>Postre: Brownies de Chocolate
+                            <br>
+                            <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>150 g de chocolate negro</li>
+                                <li>100 g de mantequilla</li>
+                                <li>1 taza de azúcar</li>
+                                <li>2 huevos</li>
+                                <li>1/2 taza de harina</li>
+                                <li>1/4 cucharadita de sal</li>
+                                <li>1/2 taza de nueces (opcional)</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Precalentar el horno a 180°C y engrasar un molde.</li>
+                                <li>Derretir el chocolate y la mantequilla a baño maría.</li>
+                                <li>Retirar del fuego y añadir el azúcar, mezclar bien.</li>
+                                <li>Agregar los huevos uno a uno, seguido de la harina y la sal. Mezclar hasta que esté suave.</li>
+                                <li>Incorporar las nueces (si se utilizan) y verter en el molde.</li>
+                                <li>Hornear durante 20-25 minutos. Dejar enfriar antes de cortar.</li>
+                            </ol>
+                        </th>
+                        <th>Tarta de Manzana
+                            <br>
+                            <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>Masa de tarta</li>
+                                <li>4 manzanas</li>
+                                <li>Azúcar y canela</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Rellena la masa con manzanas, azúcar y canela. Hornea a 180°C por 30 minutos.</li>
+                            </ol>
+                        </th>
+                        <th>Flan de Caramelo
+                            <br>
+                            <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>1 lata de leche condensada</li>
+                                <li>1 lata de leche evaporada</li>
+                                <li>3 huevos</li>
+                                <li>1 taza de azúcar (para el caramelo)</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Prepara el caramelo y viértelo en un molde.</li>
+                                <li>Mezcla los demás ingredientes</li>
+                                <li>vierte sobre el caramelo y hornea al baño maría.</li>
+                            </ol>
+                        </th>
+                        <th>Galletas de Avena y Pasas
+                            <br>
+                            <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                            <ul> 
+                                <h2>Ingredientes:</h2>
+                                <li>1 taza de avena</li>
+                                <li>1/2 taza de azúcar</li>
+                                <li>1/2 taza de mantequilla</li>
+                                <li>1 huevo</li>
+                                <li>Pasas al gusto</li>
+                            </ul>
+                            <ol> 
+                                <h2>Instrucciones:</h2>
+                                <li>Mezcla todos los ingredientes</li>
+                                <li>forma bolitas</li>
+                                <li>Hornea a 180°C por 10-12 minutos.</li>
+                            </ol>
+                        </th>
+                    </tr>
+                </table>
+            </section>
+        </section>
+    </main>
+    <hr>
+    <footer>
+        <div>
+            <h3>GIT-FOOD</h3>
+            <p>Explora recetas tradicionales y modernas que celebran la diversidad culinaria. 
+                    Comparte momentos especiales alrededor de la mesa con nuestras deliciosas propuestas.</p>
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+            </ul>
+        </div>
+        <div>
+            <p>© 2023 GIT-FOOD. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
