--- a/Recetas/Entradas/Entradas.html
+++ b/Recetas/Entradas/Entradas.html
@@ -48,7 +48,7 @@
         <section><!--Tarjetas Recetas-->
             <table width="100%" height="800px">
                 <tr>
-                    <th>Entrada:Bruschetta de Tomate y Albahaca
+                    <th>Bruschetta de Tomate y Albahaca
                         <br>
                         <img src="/Imagenes/Bruschetta_de_Tomate_y_Albahaca.jpg" alt="Brouchetta de tomate" width="50%" >
                         <ul> 
@@ -70,7 +70,7 @@
                     </th>
                     <th>Guacamole
                         <br>
-                        <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                        <img src="/Recetas/Imagenes_Recetas/Guacamole.jpg" alt="GUACAMOLE" width="50%">
                         <ul> 
                             <h2>Ingredientes:</h2>
                             <li>2 aguacates</li>
@@ -87,7 +87,7 @@
                     </th>
                     <th>Rollitos de Jamón y Queso
                         <br>
-                        <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                        <img src="/Recetas/Imagenes_Recetas/ROLLO_JAMON_Y_QUEZO.jpg" alt="ROLLO_JAMON_QUEZO" width="50%">
                         <ul> 
                             <h2>Ingredientes:</h2>
                             <li>Lonchas de jamón</li>
@@ -102,14 +102,14 @@
                     </th>
                     <th>Hummus Clásico
                         <br>
-                        <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                        <img src="/Recetas/Imagenes_Recetas/Hummus_Clásico.jpg" alt="HUMMUS_CLASICO" width="50%">
                         <ul> 
                             <h2>Ingredientes:</h2>
                             <li>1 lata de garbanzos</li>
                             <li>2 cucharadas de tahini</li>
                             <li>Jugo de 1 limón</li>
                             <li>2 dientes de ajo</li>
-                            <li>Aceite de oliva y sal al gust</li>
+                            <li>Aceite de oliva y sal al gusto</li>
                         </ul>
                         <ol> 
                             <h2>Instrucciones:</h2>
