--- a/Recetas/Guarniciones/Guarniciones.html
+++ b/Recetas/Guarniciones/Guarniciones.html
@@ -67,7 +67,7 @@
                     </th>
                     <th>Ensalada César
                         <br>
-                        <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                        <img src="/Recetas/Imagenes_Recetas/Ensalada_César.jpg" alt="ENSALADA_CÉSAR" width="50%">
                         <ul> 
                             <h2>Ingredientes:</h2>
                             <li>Lechuga romana</li>
@@ -82,7 +82,7 @@
                     </th>
                     <th>Arroz Pilaf
                         <br>
-                        <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                        <img src="/Recetas/Imagenes_Recetas/Arroz_Pilaf.jpg" alt=" Puré de Papas" width="50%">
                         <ul> 
                             <h2>Ingredientes:</h2>
                             <li>1 taza de arroz</li>
@@ -97,7 +97,7 @@
                     </th>
                     <th>Vegetales Asados
                         <br>
-                        <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                        <img src="/Recetas/Imagenes_Recetas/Vegetales_Asados.jpg" alt="VEGETALES_ASADOS" width="50%">
                         <ul> 
                             <h2>Ingredientes:</h2>
                             <li>Zanahorias, pimientos, calabacines</li>
