--- a/Recetas/Plato_Fuerte/Plato_Fuerte.html
+++ b/Recetas/Plato_Fuerte/Plato_Fuerte.html
@@ -48,7 +48,7 @@
         <section><!--Tarjetas Recetas-->
             <table width="100%" height="800px">
                 <tr>
-                    <th>Fuerte: Pollo Al Limón
+                    <th>Pollo Al Limón
                         <br>
                         <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
                         <ul> 
@@ -69,7 +69,7 @@
                     </th>
                     <th>Spaghetti a la Boloñesa
                         <br>
-                        <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                        <img src="/Recetas/Imagenes_Recetas/Spaghetti_a_la_Boloñesa.jpg" alt="SPAGHETTI_BOLOÑESA" width="50%">
                         <ul> 
                             <h2>Ingredientes:</h2>
                             <li>400 g de espaguetis</li>
@@ -86,7 +86,7 @@
                     </th>
                     <th>Tacos de Pescado
                         <br>
-                        <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                        <img src="/Recetas/Imagenes_Recetas/Tacos_de_Pescado.jpg" alt="TACO_PESCADO" width="50%">
                         <ul> 
                             <h2>Ingredientes:</h2>
                             <li>Filetes de pescado</li>
@@ -102,7 +102,7 @@
                     </th>
                     <th>Lentejas Estofadas
                         <br>
-                        <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                        <img src="/Recetas/Imagenes_Recetas/Lentejas_Estofadas.jpg" alt="LENTEJAS_ESTOFADAS" width="50%">
                         <ul> 
                             <h2>Ingredientes:</h2>
                             <li>1 taza de lentejas</li>
