--- a/Recetas/Postres/Postres.html
+++ b/Recetas/Postres/Postres.html
@@ -48,7 +48,7 @@
         <section><!--Tarjetas Recetas-->
             <table width="100%" height="800px">
                 <tr>
-                    <th>Postre: Brownies de Chocolate
+                    <th>Brownies de Chocolate
                         <br>
                         <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
                         <ul> 
@@ -73,7 +73,7 @@
                     </th>
                     <th>Tarta de Manzana
                         <br>
-                        <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                        <img src="/Recetas/Imagenes_Recetas/Tarta_de_Manzana.jpg" alt="TARTA_MANZANA" width="50%">
                         <ul> 
                             <h2>Ingredientes:</h2>
                             <li>Masa de tarta</li>
@@ -87,7 +87,7 @@
                     </th>
                     <th>Flan de Caramelo
                         <br>
-                        <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                        <img src="/Recetas/Imagenes_Recetas/Flan_de_Caramelo.jpg" alt="FLAN_CARAMELO" width="50%">
                         <ul> 
                             <h2>Ingredientes:</h2>
                             <li>1 lata de leche condensada</li>
@@ -104,7 +104,7 @@
                     </th>
                     <th>Galletas de Avena y Pasas
                         <br>
-                        <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                        <img src="/Recetas/Imagenes_Recetas/Galletas_de_Avena_y_Pasas.jpg" alt="GALLETAS_AVENA" width="50%">
                         <ul> 
                             <h2>Ingredientes:</h2>
                             <li>1 taza de avena</li>
