--- a/Recetas/Recetas.html
+++ b/Recetas/Recetas.html
@@ -72,7 +72,7 @@
                         </th>
                         <th>Guacamole
                             <br>
-                            <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Guacamole.jpg" alt="GUACAMOLE" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>2 aguacates</li>
@@ -89,7 +89,7 @@
                         </th>
                         <th>Rollitos de Jamón y Queso
                             <br>
-                            <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/ROLLO_JAMON_Y_QUEZO.jpg" alt="ROLLO_JAMON_QUEZO" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>Lonchas de jamón</li>
@@ -104,7 +104,7 @@
                         </th>
                         <th>Hummus Clásico
                             <br>
-                            <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Hummus_Clásico.jpg" alt="HUMMUS_CLASICO" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>1 lata de garbanzos</li>
@@ -129,7 +129,7 @@
                     <tr>
                         <th>Fuerte: Pollo Al Limón
                             <br>
-                            <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>4 pechugas de pollo</li>
@@ -148,7 +148,7 @@
                         </th>
                         <th>Spaghetti a la Boloñesa
                             <br>
-                            <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Spaghetti_a_la_Boloñesa.jpg" alt="SPAGHETTI_BOLOÑESA" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>400 g de espaguetis</li>
@@ -165,7 +165,7 @@
                         </th>
                         <th>Tacos de Pescado
                             <br>
-                            <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Tacos_de_Pescado.jpg" alt="TACO_PESCADO" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>Filetes de pescado</li>
@@ -181,7 +181,7 @@
                         </th>
                         <th>Lentejas Estofadas
                             <br>
-                            <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Lentejas_Estofadas.jpg" alt="LENTEJAS_ESTOFADAS" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>1 taza de lentejas</li>
@@ -205,7 +205,7 @@
                     <tr>
                         <th> Puré de Papas
                             <br>
-                            <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>1 kg de papas</li>
@@ -222,7 +222,7 @@
                         </th>
                         <th>Ensalada César
                             <br>
-                            <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Ensalada_César.jpg" alt="ENSALADA_CÉSAR" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>Lechuga romana</li>
@@ -237,7 +237,7 @@
                         </th>
                         <th>Arroz Pilaf
                             <br>
-                            <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Arroz_Pilaf.jpg" alt="Arroz_Pilaf" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>1 taza de arroz</li>
@@ -252,7 +252,7 @@
                         </th>
                         <th>Vegetales Asados
                             <br>
-                            <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Vegetales_Asados.jpg" alt="VEGETALES_ASADOS" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>Zanahorias, pimientos, calabacines</li>
@@ -274,7 +274,7 @@
                     <tr>
                         <th>Postre: Brownies de Chocolate
                             <br>
-                            <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>150 g de chocolate negro</li>
@@ -297,7 +297,7 @@
                         </th>
                         <th>Tarta de Manzana
                             <br>
-                            <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Tarta_de_Manzana.jpg" alt="TARTA_MANZANA" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>Masa de tarta</li>
@@ -311,7 +311,7 @@
                         </th>
                         <th>Flan de Caramelo
                             <br>
-                            <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Flan_de_Caramelo.jpg" alt="FLAN_CARAMELO" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>1 lata de leche condensada</li>
@@ -328,7 +328,7 @@
                         </th>
                         <th>Galletas de Avena y Pasas
                             <br>
-                            <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                            <img src="/Recetas/Imagenes_Recetas/Galletas_de_Avena_y_Pasas.jpg" alt="GALLETAS_AVENA" width="50%">
                             <ul> 
                                 <h2>Ingredientes:</h2>
                                 <li>1 taza de avena</li>
