--- a/Index.html
+++ b/Index.html
@@ -251,9 +251,35 @@
                 </li>
             </ul>
         </section>
-        <section><!--Registro/Inicio-->
+        <hr>
+    <form action="#" method="POST">
+        <label for="username">Nombre de Usuario:</label>
+        <input type="text" id="username" name="username" required>
+        <br>
 
-        </section>
+        <label for="email">Correo Electrónico:</label>
+        <input type="email" id="email" name="email" required>
+        <br>
+
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" required>
+        <br>
+
+        <input type="submit" value="Registrar">
+    </form>
+
+    <h2>Formulario de Inicio de Sesión</h2>
+    <form action="#" method="POST">
+        <label for="login-username">Nombre de Usuario:</label>
+        <input type="text" id="login-username" name="login-username" required>
+        <br>
+
+        <label for="login-password">Contraseña:</label>
+        <input type="password" id="login-password" name="login-password" required>
+        <br>
+
+        <input type="submit" value="Iniciar Sesión">
+    </form>
     </main>
     <hr>
     <footer>
