--- a/Index.html
+++ b/Index.html
@@ -39,11 +39,13 @@
     <main>
         <section><!--Imagen del Inicio-->
             <div>
-                <p><h1>Creado para Deleitar</h1></p>
+                <h1>Creado para Deleitar</h1>
                 <h2>Lo Mejor de Nuestro Recetario</h2>
             </div>
             <img src="./Imagenes/Imagen_Header.jpg" alt="Img_Main" width="100%">
+            <h1>REALIZADO POR:<br> DUBER ANDRES MONSALVE JARAMILLO<br>JACOBO ARROYAVE VILLADA</h1>
         </section>
+        <hr>
         <section>
             <section><!--Tarjetas Recetas-->
                 <table width="100%" height="800px">
@@ -123,6 +125,7 @@
                 </table>
             </section>
             <br>
+            <hr>
             <section><!--Tarjetas Cuchillos-->
                 <table width="100%" height="800px">
                 <tr>
